<resources>
    <string name="app_name">Ντίνα</string>
    <string name="action_settings">Ρυθμίσεις</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Προσωπικά Στοιχεία</string>

    <!-- Messages Preferences -->
    <string name="name_title">Όνομα</string>
    <string name="address_title">Διεύθυνση</string>
    <string name="_1">1.</string>
    <string name="reason1">Μετακίνηση για λόγους υγείας</string>
    <string name="_2">2.</string>
    <string name="reason2">Μετάβαση σε κατάστημα προμηθειών</string>
    <string name="_3">3.</string>
    <string name="reason3">Μετάβαση σε δημόσια υπηρεσία και τράπεζα</string>
    <string name="_4">4.</string>
    <string name="reason4">Μετακίνηση για παροχή βοήθειας</string>
    <string name="_5">5.</string>
    <string name="reason5">Μετάβαση σε κηδεία</string>
    <string name="_6">6.</string>
    <string name="reason6">Σωματική άσκηση</string>
    <string name="reasonShop">Μετακίνηση σε εμπορικό κατάστημα</string>
    <string name="shopMessage">Μετακίνηση</string>
    <string name="set_settings_warning">Ορίστε τα προσωπικά σας στοιχεία στις ρυθμίσεις</string>
    <string name="pref_name">name</string>
    <string name="pref_addr">address</string>
    <string name="toast_set_credentials">Ορίστε τα προσωπικά σας στοιχεία</string>
    <string name="yes">Ναι</string>
    <string name="cancel">Άκυρο</string>
    <string name="alert_shop">Αποστολή μηνύματος μετακίνησης σε εμπορικό κατάστημα</string>
    <string name="alert_code">Αποστολή κωδικού</string>

</resources>