<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/set_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/set_settings_warning"
                android:textColor="@color/design_default_color_error"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="@dimen/bottommargin"
                android:background="@color/color_background"
                android:padding="@dimen/padding_item">

                <TextView
                    android:id="@+id/code1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/_1"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/code_size" />

                <TextView
                    android:id="@+id/reason1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:text="@string/reason1"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/reason_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottommargin"
                android:background="@color/color_background"
                android:padding="@dimen/padding_item">

                <TextView
                    android:id="@+id/code2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/_2"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/code_size" />

                <TextView
                    android:id="@+id/reason2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:text="@string/reason2"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/reason_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottommargin"
                android:background="@color/color_background"
                android:padding="@dimen/padding_item">

                <TextView
                    android:id="@+id/code3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/_3"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/code_size" />

                <TextView
                    android:id="@+id/reason3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:text="@string/reason3"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/reason_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottommargin"
                android:background="@color/color_background"
                android:padding="@dimen/padding_item">

                <TextView
                    android:id="@+id/code4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/_4"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/code_size" />

                <TextView
                    android:id="@+id/reason4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:text="@string/reason4"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/reason_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottommargin"
                android:background="@color/color_background"
                android:padding="@dimen/padding_item">

                <TextView
                    android:id="@+id/code5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/_5"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/code_size" />

                <TextView
                    android:id="@+id/reason5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:text="@string/reason5"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/reason_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottommargin"
                android:background="@color/color_background"
                android:padding="@dimen/padding_item">

                <TextView
                    android:id="@+id/code6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/_6"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/code_size" />

                <TextView
                    android:id="@+id/reason6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:text="@string/reason6"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/reason_size" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/layoutShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottommargin"
                android:background="@color/color_background2"
                android:padding="@dimen/padding_item">


                <TextView
                    android:id="@+id/reasonShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="8dp"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/reasonShop"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/reason_size" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>